Prevent buttons from overflowing off project cards.

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ li {
     box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
     background: linear-gradient(to right, rgb(255, 189, 67) 8px, white 0);
     display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
 }
 
 .mc-right {
@@ -208,4 +209,5 @@ h4 {
     grid-template-columns: 1fr 30px 30px 30px;
     gap: 20px;
     padding: 0 30px 10px;
+    max-width: 100%;
 }
